<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details.DetailsFilmFragment">

    <ImageView
        android:id="@+id/image_poster_blur"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:background="@color/medium_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no"
        tools:srcCompat="@tools:sample/cities" />

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_poster"
        android:layout_width="0dp"
        android:layout_height="150dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="4:6"
        android:layout_marginVertical="32dp">

        <ImageView
            android:id="@+id/item_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:importantForAccessibility="no"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_name_film"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/button_trailer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_poster"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_trailer"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/button_trailer_custom"
        android:drawableLeft="@drawable/ic_play"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="@+id/image_poster_blur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name_film"
        android:text="@string/trailer" />

    <ViewFlipper
        android:id="@+id/flipper_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_poster_blur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name_film">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_favorite"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_favorite_custom"
            android:paddingHorizontal="16dp"
            android:textColor="@color/medium_grey"
            app:layout_constraintBottom_toBottomOf="@+id/image_poster_blur"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name_film"
            tools:drawableStart="@drawable/ic_favorite_star_menu"
            tools:text="@string/app_menu_favorites" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="56dp"
            android:layout_gravity="center" />
    </ViewFlipper>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:layout_constraintBottom_toTopOf="@id/add_viewpager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_poster_blur"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="1dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/grey_toolbar_color" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/add_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_details" />

</androidx.constraintlayout.widget.ConstraintLayout>